--- a/conf.yml
+++ b/conf.yml
@@ -1,6 +1,12 @@
-global:
-    log_level: 0
-    testing: true
+logging:
+    level: 11
+    path: "binance_1m.log"
+
+testing:
+    enabled: true
+
+    # In USD
+    start_money: 100
 
 market:
     name: "GEMINI:BTCUSD"
@@ -8,5 +14,7 @@ market:
     check_interval: 10
 
 exchange:
+    bullish_market: ""
+    bearish_market: ""
     api_key: ""
     api_secret: ""
