--- a/conf.yml
+++ b/conf.yml
@@ -12,7 +12,7 @@ market:
     name: "GEMINI:BTCUSD"
     candle_size: "1m"
 
-    # In seconds
+    # In second
     check_interval: 10
 
 exchange:
