--- a/conf.yml
+++ b/conf.yml
@@ -9,6 +9,9 @@ testing:
     # In USD
     start_money: 100
 
+    # In ratio (1% is 0.01)
+    fee: 0.001
+
 market:
     name: "GEMINI:BTCUSD"
     candle_size: "1h"
