--- a/conf.yml
+++ b/conf.yml
@@ -12,6 +12,8 @@ testing:
     # In ratio (1% is 0.01)
     fee: 0.001
 
+    balance_storage: "balances.json"
+
 market:
     name: "GEMINI:BTCUSD"
     candle_size: "1h"
