Add bot name to mailing. refs #763

--- a/conf.yml
+++ b/conf.yml
@@ -34,3 +34,7 @@ exchange:
     bearish_market: "BEAR-USDT"
     api_key: ""
     api_secret: ""
+
+mail:
+    receiver: "vargab95@gmail.com"
+    password: "Asguto95"
