--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.19
 PyHamcrest==2.0.1
+pymongo==3.10.1
 pyOpenSSL==19.1.0
 python-binance==0.7.5
 python-dateutil==2.8.1
