--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
+aniso8601==8.0.0
 attrs==19.3.0
 autobahn==20.2.2
 Automat==20.2.0
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
+click==7.1.1
 constantly==15.1.0
 cryptography==2.8
 dateparser==0.7.2
+Flask==1.1.1
+Flask-RESTful==0.3.8
 hyperlink==19.0.0
 idna==2.9
 incremental==17.5.0
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.19
@@ -28,4 +35,5 @@ Twisted==19.10.0
 txaio==20.1.1
 tzlocal==2.0.0
 urllib3==1.25.8
+Werkzeug==1.0.0
 zope.interface==4.7.1
