--- a/trading-view-bot-ui/package.json
+++ b/trading-view-bot-ui/package.json
@@ -11,15 +11,22 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/color-picker": "^2.0.1",
+    "@angular-material-components/datetime-picker": "^2.0.1",
+    "@angular-material-components/moment-adapter": "^2.0.1",
     "@angular/animations": "~9.0.7",
+    "@angular/cdk": "^9.1.3",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
     "@angular/forms": "~9.0.7",
+    "@angular/material": "^9.1.3",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-zoom": "^0.7.5",
+    "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
