--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ constantly==15.1.0
 cryptography==2.8
 dateparser==0.7.2
 Flask==1.1.1
+Flask-Cors==3.0.8
 Flask-RESTful==0.3.8
 hyperlink==19.0.0
 idna==2.9
