Implement ftx mock and add config for exchange to the exchange config. refs #804

--- a/backend/conf.yml
+++ b/backend/conf.yml
@@ -29,6 +29,7 @@ market:
     bearish_threshold: 0.0
 
 exchange:
+    name: "ftx"
     watched_market: "BTC-USDT"
     bullish_market: "BULL-USDT"
     bearish_market: "BEAR-USDT"
