Implement step gain trader. refs #845

--- a/backend/conf.yml
+++ b/backend/conf.yml
@@ -20,6 +20,8 @@ market:
     indicator_sma: 1
     follower_enabled: true
     follower_candle_size: "1D"
+    method: "stepped"
+    step_count: 5
 
     # In second
     check_interval: 10
