--- a/trading-view-bot-ui/package.json
+++ b/trading-view-bot-ui/package.json
@@ -28,6 +28,7 @@
     "chartjs-plugin-zoom": "^0.7.5",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
+    "ngx-cookie-service": "^3.0.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
