--- a/backend/conf.yml
+++ b/backend/conf.yml
@@ -1,9 +1,9 @@
-!!python/object:config.trader.TraderConfig
+!!python/object:config.application.TraderConfig
 database: !!python/object:config.database.DatabaseConfig
   limit: -1
-  password: ''
-  url: ''
-  user: ''
+  password: ""
+  url: ""
+  user: ""
 exchange: !!python/object:config.exchange.ExchangeConfig
   bearish_market: !!python/object:exchange.interface.Market
     amount: 0.0
@@ -15,10 +15,10 @@ exchange: !!python/object:config.exchange.ExchangeConfig
     base: USDT
     price: 0.0
     target: BULL
-  market_name_format: '{target}-{base}'
+  market_name_format: "{target}-{base}"
   name: binance
-  private_key: ''
-  public_key: ''
+  private_key: ""
+  public_key: ""
   watched_market: !!python/object:exchange.interface.Market
     amount: 0.0
     base: USDT
@@ -26,12 +26,12 @@ exchange: !!python/object:config.exchange.ExchangeConfig
     target: BTC
 logging: !!python/object:config.logging.LoggingConfig
   level: 31
-  path: ''
+  path: ""
 mail: !!python/object:config.mail.MailConfig
   name: TradingViewBot
-  password: ''
+  password: ""
   port: 25
-  receiver: ''
+  receiver: ""
   sender: tvb@vbj.hu
   smtp_server: smtp.vbj.hu
 market: !!python/object:config.market.MarketConfig
@@ -46,12 +46,12 @@ market: !!python/object:config.market.MarketConfig
   method: simple
   name: GEMINI:BTCUSD
   thresholds:
-  - bear: 0.0
-    bull: 0.0
+    - bear: 0.0
+      bull: 0.0
 server: !!python/object:config.server.ServerConfig
-  datetime_format: '%Y-%m-%dT%H:%M:%S.%fZ'
+  datetime_format: "%Y-%m-%dT%H:%M:%S.%fZ"
   port: 5000
-  secret_key: ''
+  secret_key: ""
 testing: !!python/object:config.testing.TestingConfig
   balance_store: balances.json
   enabled: false
