--- a/backend/conf.yml
+++ b/backend/conf.yml
@@ -1,60 +1,54 @@
-!!python/object:config.application.TraderConfig
-database: !!python/object:config.database.DatabaseConfig
-  limit: -1
-  password: ""
-  url: ""
-  user: ""
-exchange: !!python/object:config.exchange.ExchangeConfig
-  bearish_market: !!python/object:exchange.interface.Market
-    amount: 0.0
-    base: USDT
-    price: 0.0
-    target: BEAR
-  bullish_market: !!python/object:exchange.interface.Market
-    amount: 0.0
-    base: USDT
-    price: 0.0
-    target: BULL
-  market_name_format: "{target}-{base}"
+database:
+  limit: 1000000
+  url: "bvarga.hu"
+  user: "tvb"
+  password: "Asguto95"
+exchange:
+  bearish_market: "BTC-USDT"
+  bullish_market: "BTC-USDT"
+  market_name_format: "{target}{base}"
   name: binance
   private_key: ""
   public_key: ""
-  watched_market: !!python/object:exchange.interface.Market
-    amount: 0.0
-    base: USDT
-    price: 0.0
-    target: BTC
-logging: !!python/object:config.logging.LoggingConfig
-  level: 31
-  path: ""
-mail: !!python/object:config.mail.MailConfig
+  watched_market: "BTC-USDT"
+filters:
+  - type: hma
+    length: 3000
+  - type: derivative
+    length: 20
+  - type: hma
+    length: 300
+logging:
+  level: 11
+  path: "simulator.log"
+mail:
   name: TradingViewBot
   password: ""
   port: 25
   receiver: ""
   sender: tvb@vbj.hu
   smtp_server: smtp.vbj.hu
-market: !!python/object:config.trader.MarketConfig
+server:
+  datetime_format: "%Y-%m-%dT%H:%M:%S.%fZ"
+  port: 5000
+  secret_key: ""
+testing:
+  balance_store: balances.json
+  enabled: true
+  fee: 0.001
+  real_time: false
+  start_money: 100.0
+trader:
   candle_size: 1h
   check_interval: 60
   falling_edge_detection: false
   follower_candle_size: 1h
   follower_enabled: false
-  indicator_name: all
+  indicator: all
   indicator_sma: 1
+  name: BTCUSD
   max_steps: 5
   method: simple
-  name: GEMINI:BTCUSD
   thresholds:
     - bear: 0.0
       bull: 0.0
-server: !!python/object:config.server.ServerConfig
-  datetime_format: "%Y-%m-%dT%H:%M:%S.%fZ"
-  port: 5000
-  secret_key: ""
-testing: !!python/object:config.testing.TestingConfig
-  balance_store: balances.json
-  enabled: false
-  fee: 0.001
-  real_time: false
-  start_money: 100.0
