--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -2,8 +2,16 @@
   // Use IntelliSense to learn about possible attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
+  "version": "0.3.0",
   "configurations": [
+    {
+      "name": "Gatherer",
+      "type": "python",
+      "request": "launch",
+      "program": "main.py",
+      "console": "integratedTerminal",
+      "args": ["gatherer", "./conf.yml"]
+    },
     {
       "name": "Exporter",
       "type": "python",
