Implement csv based simulator, add some additional logging and fix some bugs

--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -26,7 +26,7 @@
       "request": "launch",
       "program": "main.py",
       "console": "integratedTerminal",
-      "args": ["simulator", "./conf.yml"]
+      "args": ["simulator", "./conf_simulator.yml"]
     }
   ]
 }
