Implement automatic initalization

--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -27,6 +27,14 @@
       "program": "main.py",
       "console": "integratedTerminal",
       "args": ["simulator", "./conf_simulator.yml"]
+    },
+    {
+      "name": "Trader",
+      "type": "python",
+      "request": "launch",
+      "program": "main.py",
+      "console": "integratedTerminal",
+      "args": ["trader", "./conf.yml"]
     }
   ]
 }
