--- a/backend/.pylintrc
+++ b/backend/.pylintrc
@@ -142,7 +142,8 @@ disable=print-statement,
         exception-escape,
         comprehension-escape,
         missing-docstring,
-        too-few-public-methods
+        too-few-public-methods,
+        too-many-instance-attributes
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
