Add option to specify application and config path using env var

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,6 +6,9 @@ COPY ./requirements.txt ./requirements.txt
 RUN python3 -m pip install --upgrade pip
 RUN python3 -m pip install -r requirements.txt
 
+ENV TRADER_APPLICATION_TYPE=
+ENV TRADER_CONFIG_FILE=
+
 COPY . .
 
 ENTRYPOINT ["./run.sh"]
