--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ source_linter:
   image: $IMAGE_REGISTRY_CI_USER/tradingviewbot:${CI_COMMIT_SHA}
 
   script:
+    - chmod +x ./run_linter.sh
     - ./run_linter.sh
 
 run_security_checks:
@@ -48,6 +49,7 @@ run_security_checks:
   image: $IMAGE_REGISTRY_CI_USER/tradingviewbot:${CI_COMMIT_SHA}
 
   script:
+    - chmod +x ./run_security_check.sh
     - ./run_security_check.sh
 
 measure_coverage:
@@ -55,6 +57,7 @@ measure_coverage:
   image: $IMAGE_REGISTRY_CI_USER/tradingviewbot:${CI_COMMIT_SHA}
 
   script:
+    - chmod +x ./measure_coverage.sh
     - ./measure_coverage.sh
 
 build_and_push_branch_image:
