Implement a docker image to be able to delete ephemeral docker tags

--- a/backend/tools/tag-deleter/Dockerfile
+++ b/backend/tools/tag-deleter/Dockerfile
@@ -5,7 +5,7 @@ ENV IMAGE_REGISTRY_CI_PASSWORD=
 ENV CI_COMMIT_SHA=
 
 RUN apt-get update && apt-get upgrade -y && apt-get install -y curl jq
-COPY tools/delete_tag.sh .
+COPY delete_tag.sh .
 RUN chmod +x delete_tag.sh
 
 CMD ["./delete_tag.sh"]
