--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,13 +32,13 @@ build_and_push_testing_branch_image:
       - branches
 
   script:
-    - docker image build -t tradingviewbot --build-arg include_testing_tools=true .
-    - docker image tag tradingviewbot $IMAGE_REGISTRY_CI_USER/tradingviewbot:${CI_COMMIT_SHA}
-    - docker image push $IMAGE_REGISTRY_CI_USER/tradingviewbot:${CI_COMMIT_SHA}
+    - docker image build -t $CI_PROJECT_NAME --build-arg include_testing_tools=true .
+    - docker image tag $CI_PROJECT_NAME $IMAGE_REGISTRY_CI_USER/$CI_PROJECT_NAME:${CI_COMMIT_SHA}
+    - docker image push $IMAGE_REGISTRY_CI_USER/$CI_PROJECT_NAME:${CI_COMMIT_SHA}
 
 source_linter:
   stage: lint
-  image: $IMAGE_REGISTRY_CI_USER/tradingviewbot:${CI_COMMIT_SHA}
+  image: $IMAGE_REGISTRY_CI_USER/$CI_PROJECT_NAME:${CI_COMMIT_SHA}
 
   script:
     - chmod +x ./run_linter.sh
@@ -46,7 +46,7 @@ source_linter:
 
 run_security_checks:
   stage: lint
-  image: $IMAGE_REGISTRY_CI_USER/tradingviewbot:${CI_COMMIT_SHA}
+  image: $IMAGE_REGISTRY_CI_USER/$CI_PROJECT_NAME:${CI_COMMIT_SHA}
 
   script:
     - chmod +x ./run_security_check.sh
@@ -54,7 +54,7 @@ run_security_checks:
 
 measure_coverage:
   stage: test
-  image: $IMAGE_REGISTRY_CI_USER/tradingviewbot:${CI_COMMIT_SHA}
+  image: $IMAGE_REGISTRY_CI_USER/$CI_PROJECT_NAME:${CI_COMMIT_SHA}
 
   script:
     - chmod +x ./measure_coverage.sh
@@ -72,9 +72,9 @@ build_and_push_branch_image:
       - branches
 
   script:
-    - docker image build -t tradingviewbot .
-    - docker image tag tradingviewbot $IMAGE_REGISTRY_CI_USER/tradingviewbot:$CI_COMMIT_BRANCH
-    - docker image push $IMAGE_REGISTRY_CI_USER/tradingviewbot:$CI_COMMIT_BRANCH
+    - docker image build -t $CI_PROJECT_NAME .
+    - docker image tag $CI_PROJECT_NAME $IMAGE_REGISTRY_CI_USER/$CI_PROJECT_NAME:$CI_COMMIT_BRANCH
+    - docker image push $IMAGE_REGISTRY_CI_USER/$CI_PROJECT_NAME:$CI_COMMIT_BRANCH
 
 build_and_push_tag_image:
   stage: build
@@ -88,9 +88,9 @@ build_and_push_tag_image:
       - tags
 
   script:
-    - docker image build -t tradingviewbot .
-    - docker image tag tradingviewbot $IMAGE_REGISTRY_CI_USER/tradingviewbot:$CI_COMMIT_TAG
-    - docker image push $IMAGE_REGISTRY_CI_USER/tradingviewbot:$CI_COMMIT_TAG
+    - docker image build -t $CI_PROJECT_NAME .
+    - docker image tag $CI_PROJECT_NAME $IMAGE_REGISTRY_CI_USER/$CI_PROJECT_NAME:$CI_COMMIT_TAG
+    - docker image push $IMAGE_REGISTRY_CI_USER/$CI_PROJECT_NAME:$CI_COMMIT_TAG
 
 delete_testing_image:
   stage: cleanup
