--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ stages:
 
 before_script:
    - '[ -d backend ] && cd backend'
-   - which docker && docker login --username=$IMAGE_REGISTRY_CI_USER --password=$IMAGE_REGISTRY_CI_PASSWORD $IMAGE_REGISTRY_URL
+   - which docker && docker login --username=$IMAGE_REGISTRY_CI_USER --password=$IMAGE_REGISTRY_CI_TOKEN $IMAGE_REGISTRY_URL
 
 
 build_and_push_testing_branch_image:
