Upload tag deleter to be able to remove tags from private registry

--- a/backend/tools/tag-deleter/Dockerfile
+++ b/backend/tools/tag-deleter/Dockerfile
@@ -1,8 +1,10 @@
 FROM debian
 
+ENV IMAGE_REGISTRY_URL=hub.docker.com
 ENV IMAGE_REGISTRY_CI_USER=
 ENV IMAGE_REGISTRY_CI_PASSWORD=
 ENV CI_COMMIT_SHA=
+ENV USE_TOKEN=
 
 RUN apt-get update && apt-get upgrade -y && apt-get install -y curl jq
 COPY delete_tag.sh .
